--- a/frontend/src/components/navigation/Navigation.css
+++ b/frontend/src/components/navigation/Navigation.css
@@ -18,6 +18,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  height: 68px;
 }
 
 #signupNav {
